# face-scan-stereo

./: CMakeLists.txt  README.md
include/: face_stereo.h
src/: face_stereo.cpp  main_face_stereo_reconst.cpp
test/: corner_pts_0.txt  input.txt  left_K.txt  left_pts_0.txt  right_K.txt  right_cam_pose.txt  right_pts_0.txt
